--- a/02.css/css/styles.css
+++ b/02.css/css/styles.css
@@ -254,6 +254,7 @@ body{
     border-radius: 25px;
 }
 
+/* 30 Margin */
 .margin{
     margin: 10px;
     background-color: #222;
@@ -265,4 +266,259 @@ body{
 .margin-3{
     margin: 5px 10px 15px 20px;
     background-color: #666;
+}
+
+/* 31 box model */
+.box-model{
+    margin: 20px;
+    background-color: aquamarine;
+    padding: 15px 25px;
+    border: 2px solid red;
+    border-radius: 7px;
+    width: 200px;
+    height: 400px;
+    /* Mesma regra da sequencia do sentido horário do padding, serve para a margin */
+}
+
+/* 32 Desafio 3 */
+#box-model-desafio{
+    margin: 15px;
+    padding: 15px;
+    border: 2px solid red;
+    background-color: antiquewhite;
+}
+
+.desafio-title{
+    background-color: #55a398;
+    color: #fff;
+    outline: 5px solid green;/*fora da linha, cria uma borda extra fora do elemento*/
+    border: none; /*Aqui eu digo que não quero borda, pois anteriomente, defini que o h2 teria uma borda abaixo, border-bottom*/
+}
+
+/* 33 alinhamento de texto */
+.text-aligned{
+    text-align: right;
+    background-color: yellow;
+}
+
+.container-center{
+    text-align: center;
+    background-color:  antiquewhite;
+    width: 300px;
+    border: 2px solid red;
+    margin-left: 130px;
+    margin-top: 100px;
+}
+
+/* 34 text decoration */
+.underline{
+    text-decoration: underline;
+}
+
+.line-trough{
+    text-decoration: line-through;
+}
+
+.remover-underline{
+    text-decoration: none;
+    color: red;
+}
+
+/* 35 text transform, transforma texto de minuscula para maiusculo e maiusculo para minusculo*/
+.upper{
+    text-transform: uppercase;
+}
+
+.lower{
+    text-transform: lowercase;
+}
+
+/* 36 espaçamento de letras */
+.spacing{
+    letter-spacing: 5px;
+}
+
+/* 37 Fontes */
+.serif{
+    font-family: Georgia;
+}
+
+.sans-serif{
+    font-family: helvetica;
+}
+
+.monospace{
+    font-family: 'Courier New';
+}
+
+.cursive{
+    font-family: cursive;
+}
+
+.fantasy{
+    font-family: fantasy;
+}
+
+/* 38 fonte itálico */
+.italic{
+    font-style: italic;
+}
+
+.oblique{
+    font-style: oblique;
+}
+
+/* 39 font weight */
+.thin,
+.bold,
+.bolder{
+    font-family: helvetica;
+}
+.thin{
+    font-weight: 100;
+}
+
+.bold{
+    font-weight: 600;
+}
+
+.bolder{
+    font-weight: 900;
+}
+
+/* 40 font size tamanho da fonte */
+.small{
+    font-size: 6px;
+}
+
+.big{
+    font-size: 78px;
+}
+
+/* 41 Display */
+.inline-box{
+    width: 50px;
+    height: 50px;
+    background-color: #4f8;
+    margin: 10px;
+    display: inline-block; /*a div com display inline-block, fica um do lado do outro*/
+}
+
+.block{
+    background-color: #333;
+    margin: 10px;
+    display: inline; /*o span com o display inline, fica um em baixo do outro*/
+}
+
+/* 42 oculta elementos */
+.invisible{
+    display: none;
+}
+
+/* 43 Sobre posições dos elementos */
+.static{
+    position: static;
+    width: 100px;
+    height: 100px;
+    background-color: #4f8;
+}
+
+/* 44 Posição relativa ao último elemento. Não se move em relação html e sim a tela */
+.relative{
+    position: relative;
+    background-color: #224;
+    color: #fff;
+
+    width: 100px;
+    height: 100px;
+    top: 100px;
+    left: 40px;
+}
+
+/* 45 Posição abasoluta fica na frente de quem ele quiser, pois é em relação a tela e não ao último elemento*/
+.absolute{
+    position: absolute;
+    background-color: #964;
+    color: white;
+    width: 100px;
+    height: 100px;
+    top: 20px;
+    right: 20px;
+}
+
+/* 46 Relativo com absoluto */
+.relative-container{
+    width: 300px;
+    height: 300px;
+    border: 1px solid red;
+    margin-top: 120px;
+    position: relative;
+    }
+
+.absolute-1,
+.absolute-2{
+    width: 50px;
+    height: 50px;
+    background-color: #422;
+    position: absolute ;
+}
+.absolute-1{
+    top: 10px;
+    left: 10px;
+}
+
+.absolute-2{
+    bottom: 10px;
+    right: 10px;
+}
+
+ /* 47 Posição fixed após um scroll da página, o elemento continua fixo na tela */
+ .fixed{
+    width: 100px;
+    height: 100px;
+    background-color: #851;
+    border: 1px dotted blue;
+    position: fixed;
+    top: 50px;
+    right: 100px;
+}
+
+/* 48 Position sticky. Se movimenta junto com scroll, mas quando chega no lugar dele, ele fica parado */
+.sticky{
+    width: 100px;
+    height: 100px;
+    background-color: #994;
+    border: 1px solid green;
+    position: sticky;
+    top: 10px;
+}
+
+/* 49 z-index */
+.absolute-3,
+.absolute-4,
+.absolute-5 {
+    width: 50px;
+    height: 50px;
+    background-color: #123;
+    position: absolute;
+}
+
+.absolute-3{
+    top: 0;
+    left: 0;
+    z-index: 1;
+}
+
+.absolute-4{
+    top: 10px;
+    left: 10px;
+    background-color: #246;
+    z-index: 2;
+}
+
+.absolute-5{    
+    top: 40px;
+    left: 40px;
+    background-color: #453;
+    z-index: 3;
 }
