--- a/offspring/css/style.css
+++ b/offspring/css/style.css
@@ -1,3 +1,71 @@
-body{
-    background-color: black;
+html{
+    font-family: helvetica;
+    background-color: #ddd;
+}
+
+.container{
+    background-color: #fff;
+    max-width: 1100px;/* Lrgura máxima */
+    padding: 20px 50px;
+    margin: 50px auto;/* 50px em cima e em baixo, e dos lados auto pra se alinhar automaticamente no centro */
+    position: relative;
+}
+
+.bold{
+    font-weight: bold;
+}
+
+.header{
+    text-align: center;
+}
+
+.main-title{
+    font-size: 40px;
+}
+
+.main-paragraph{
+    font-style: italic;
+}
+
+.featured-image{
+    text-align: center;
+    margin-top: 30px;
+}
+
+.biography-container{
+    padding: 25px 0;
+    border-top: 1px dashed #ddd;
+    border-bottom: 1px dashed #ddd;
+    text-align: justify;
+}
+
+.quotes-container{
+    background-color: #ddd;
+    padding: 30px;
+    margin-top: 30px;
+}
+
+.quotes-container blockquote{ /*Estou me referindo apenas o elemento de uma div para ser editada*/
+    font-weight: bold;
+    font-size: 30px;
+}
+
+.quotes-container p{
+    font-style: italic;
+}
+
+.curiosities-container{ 
+    padding: 25px 0;
+    margin: 25px 0;
+    border-top: 1px dashed #ddd;
+    border-bottom: 1px dashed #ddd;
+}
+
+.curiosities-container li{
+    height: 30px;
+}
+
+.img-bold{
+    font-weight: bold;
+    text-align: center;
 }
