--- a/04_projeto_formulario/css/style.css
+++ b/04_projeto_formulario/css/style.css
@@ -38,3 +38,97 @@ textarea{
 textarea{
     padding: 10px 5px;
 }
+
+.header{
+    background-color: #673ab7;
+    padding: 20px;
+    height: 160px;
+}
+
+.header h3{
+    color: #fff;
+    margin-top: 0;
+}
+
+.form-container{
+    background-color: #fdfdfd;
+    width: 60%;
+    margin: auto;
+    position: relative;
+    top: -62px; /*sobe um pouco para a área de outra div */
+}
+
+.form-header{
+    border-bottom: 1px solid #fdfdfd;
+    height: 45px;
+}
+
+.form-header p{
+    color: #673ab7;
+    border-bottom: 2px solid #673ab7 ;
+    width: 120px;
+    text-align: center;
+    margin: 0 auto;
+    text-transform: uppercase;
+    height: 45px;
+    line-height: 45px;
+}
+
+.form-body{
+    padding: 30px;
+}
+
+.form-title{
+    margin-bottom: 15px;
+}
+
+.form-body{
+    margin-bottom: 20px;
+}
+
+.required-field{
+    color: #d80835;
+}
+
+.box-input{
+    margin-bottom: 35px;
+}
+
+.block{
+    display: block;
+    /* Ocupa todo o bloco */
+}
+
+.optional-box{
+    display: inline-block;
+    /* Quebra e faz uma segunda coluna */
+    margin: 0 30px 30px 0;
+}
+
+.optional-list{
+    list-style: none;
+    margin-bottom: 5px;
+}
+
+.box-input p{
+    margin-bottom: 15px;
+}
+
+.btn-submit{
+    background-color: #673ab7;
+    color: #fff;
+    border: 2px solid transparent;
+    width: 150px;
+    height: 50px;
+    cursor: pointer;
+    /* chegou perto a seta vira um dedo */
+    text-transform: uppercase;
+    transition: 0.5;/*faz uma transição de cor para outra*/
+}
+
+.btn-submit :hover{ /*essa propriedade altera a cor ao passar o mouse em cima */
+    background-color: #fff;
+    border-color: #673ab7;
+    color: #673ab7;
+}
+
