--- a/08_proj_clone/css/style.css
+++ b/08_proj_clone/css/style.css
@@ -91,7 +91,7 @@ body{
     text-transform: uppercase;
     color: #bbb;
     width: 50px;
-    top: -6px;
+    margin-top: -41px;
     margin-left: -25px;
     font-size: 14px;
 }
@@ -143,6 +143,110 @@ body{
     text-decoration: none;
 }
 
-#get-app-contianer{
-    background-color: aqua;
+#get-app-container{
+    text-align: center;
+    width: 350px;
+}
+
+#get-app-container p{
+    margin: 20px 0;
+    font-size: 13px;
+}
+
+#get-app-container img{
+    width: 136px;
+    height: 40px;
+}
+
+
+#get-app-container a{
+    text-decoration: none;
+}
+
+footer{
+    display: flex;
+    text-align: left;
+    width: 1000px;
+    max-width: 50px auto;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+}
+
+#footer-links{
+    display: flex;
+    margin-right: 10px;
+}
+
+nav #footer-links{
+    list-style: none;
+}
+
+#footer-links li{
+    margin-right: 10px;  
+}
+
+#footer-links a,
+#copyright{
+    text-decoration: none;
+    font-size: 12px;
+    color: #8e8e8e;
+}
+
+#copyright{
+    margin-top: 10px;
+}
+
+/* Celular */
+@media(max-width: 450px){
+    body{
+        background-color: #fff;
+    }
+
+    #banner-container{
+        display: none; /*Faz sumir a imagem. Não se apagur ao fato de ser imagem, poderia ser outra coisa*/
+    }
+
+    #main-container,
+    #form-box{
+        margin-top: 0;
+    }
+
+    #form-container,
+    #form-box,
+    #register-container,
+    #get-app-container{
+        width: 100%;
+        border: none;
+    }
+
+    footer{
+        width: 90%;
+    }
+
+    #footer-links{
+        flex-wrap: wrap;
+        justify-content: center;
+        margin-bottom: 10px;
+    }
+}
+
+/* Tablet */
+@media(max-width: 900px){
+    body{
+        background-color: #fff;
+    }
+
+    #banner-container{
+        display: none;
+    }
+
+
+    #form-container{
+        margin-top: 0;
+        background-color: aqua;
+        
+    }
+
 }
